Bug 105343 - [CI] igt@gem_exec_schedule@pi-ringfull-bsd2 - fail - Failed assertion: __execbuf(fd, &execbuf) == -4
Summary: [CI] igt@gem_exec_schedule@pi-ringfull-bsd2 - fail - Failed assertion: __exec...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-05 10:35 UTC by Martin Peres
Modified: 2018-04-20 11:08 UTC (History)
1 user (show)

See Also:
i915 platform: KBL
i915 features: GEM/Other


Attachments

Description Martin Peres 2018-03-05 10:35:44 UTC
(gem_exec_schedule:1270) CRITICAL: Test assertion failure function test_pi_ringfull, file gem_exec_schedule.c:898:
(gem_exec_schedule:1270) CRITICAL: Failed assertion: __execbuf(fd, &execbuf) == -4
(gem_exec_schedule:1270) CRITICAL: Last errno: 4, Interrupted system call
(gem_exec_schedule:1270) CRITICAL: error: 0 != -4
Subtest pi-ringfull-bsd2 failed.

https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_3856/shard-kbl2/igt@gem_exec_schedule@pi-ringfull-bsd2.html
Comment 1 Chris Wilson 2018-03-07 08:52:21 UTC
commit e3a0ed9855a2e9d77cfd0c770ceadac5b7030e4e (HEAD, upstream/master)
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Mar 5 10:51:06 2018 +0000

    Bump measure_ring_size() timer interval
    
    It appears that waiting for a 100us period whereby we are unable to
    submit another batch and proclaim the ring full, may have the false
    positive where the scheduler intervenes and we are signalled twice
    before having slept on ring space. Increasing the interval reduces the
    likelihood of the scheduler stealing the cpu from us, but does not
    eliminate it. Fortuitously it appears to be a rare false positive.
    
    For the library routine, we can fork a RT process but that seems a bit
    overkill!
    
    References: https://bugs.freedesktop.org/show_bug.cgi?id=105343
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Cc: Antonio Argenziano <antonio.argenziano@intel.com>
    Reviewed-by: Antonio Argenziano <antonio.argenziano@intel.com>

Assuming fixed.
Comment 2 Jani Saarinen 2018-04-20 11:08:08 UTC
Closing, please re-open if still occurs.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.